[workspace]
[package]
version = "0.1.0"
name = "aggregation-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
tracing = "0.1.40"
hex = "0.4.3"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
