[workspace]
[package]
version = "0.1.0"
name = "app-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.94"
actix-web = "4.3.1"


[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
