[workspace]
[package]
version = "0.1.0"
name = "chess-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }


[[bin]]
name  = "execute"
path = "bin/execute.rs"

[[bin]]
name  = "compressed"
path = "bin/compressed.rs"


[[bin]]
name  = "plonk"
path = "bin/plonk.rs"

[[bin]]
name  = "groth16"
path = "bin/groth16.rs"
