[workspace]
[package]
version = "0.1.0"
name = "json-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
serde = "1.0.197"
serde_json = "1.0.114"
lib = {path = "../lib"}


[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }

[[bin]]
name ="plonk"
path = "bin/plonk.rs"

[[bin]]
name ="execute"
path = "bin/execute.rs"

[[bin]]
name ="groth16"
path = "bin/groth16.rs"

[[bin]]
name ="compressed"
path = "bin/compressed.rs"